2011-09-20  WOnder93  <omosnacek@gmail.com>

	* AssemblyInfo.cs:
	  

	* ImmortalMarshalByRefObject.cs:
	  Changed the Bang.ImmortalMarshalByRefObject.Disconnect()
	  method to virtual.

2011-09-19  WOnder93  <omosnacek@gmail.com>

	* AssemblyInfo.cs:
	* Bang# Common.csproj:
	  

	* Enums/RequestType.cs:
	* Interfaces/IPlayer.cs:
	* Interfaces/IPlayerControl.cs:
	* Interfaces/IEventListener.cs:
	* Interfaces/IPublicPlayerView.cs:
	* Exceptions/BadCharacterTypeException.cs:
	  Added new base for "proxy characters" (like Vera Custer,
	  Greygory Deck).
	Added new response method.
	Added new RequestType values.
	Added new PublicPlayerView property - AdditionalCharacters
	  (the abilities gained by proxy characters).
	New way of getting player victory stats.

	* Utils.cs:
	  Added unified methods for getting the list of Role,
	  CharacterType or CardType enumeration values.

2011-09-15  WOnder93  <omosnacek@gmail.com>

	* AssemblyInfo.cs:
	* Bang# Common.csproj:
	  

	* Utils.cs:
	  Do not filter object.* methods in order to enable comparing
	  via object.Equals().

2011-09-15  WOnder93  <omosnacek@gmail.com>

	* MethodRestrictionServerSink.cs:
	* MethodRestrictionServerSinkProvider.cs:
	  Added a server sink that filters requests.

	* AssemblyInfo.cs:
	* Bang# Common.csproj:
	  

	* Utils.cs:
	  Improved serving/connecting methods.
	Added filtering of requests using
	  MethodResrictionServerSinkProvider.

	* Config.cs:
	  Added locking when setting values.

	* Proxies:
	* Proxies/GameProxy.cs:
	* Proxies/CardProxy.cs:
	* Proxies/PlayerProxy.cs:
	* Proxies/ServerProxy.cs:
	* Proxies/SessionProxy.cs:
	* Proxies/SpectatorProxy.cs:
	* Proxies/PlayerControlProxy.cs:
	* Proxies/SpectatorControlProxy.cs:
	* Proxies/PublicPlayerViewProxy.cs:
	* Proxies/PrivatePlayerViewProxy.cs:
	* Proxies/PlayerSessionControlProxy.cs:
	* Proxies/SpectatorSessionControlProxy.cs:
	  Proxies are not needed any more.
	  MethodRestrictionServerSinkProvider is used instead.
