@@ -3,6 +3,15 @@
 	* AssemblyInfo.cs:
 	  
 
+	* Structs/Password.cs:
+	  Fixed a very important bug in the password hash generation
+	  algorithm.
+
+2011-09-20  WOnder93  <omosnacek@gmail.com>
+
+	* AssemblyInfo.cs:
+	  
+
 	* ImmortalMarshalByRefObject.cs:
 	  Changed the Bang.ImmortalMarshalByRefObject.Disconnect()
 	  method to virtual.
